finished inital P3.1 flow

--- a/app/views/solicitor/application-task-list-with-means.html
+++ b/app/views/solicitor/application-task-list-with-means.html
@@ -410,7 +410,7 @@
     letter-spacing: 1px;
     text-decoration: none;
     color: #fff;
-    background-color: #b10e1e;
+    background-color: #00823b;
     float: right;
     margin-right: 0;
     padding-top: 3px;
@@ -471,7 +471,7 @@
                         Background information
                 </a>
                 <a class="govuk-link" href="">
-                  <strong class="task-incomplete" id="other-1-completed">Incomplete</strong>
+                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
                 </a>
               </li>
               <li class="task-list-item">
@@ -483,11 +483,11 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="/solicitor/review-evidence">
                         Means assessment
                 </a>
-                <a class="govuk-link" href="">
-                  <strong class="task-incomplete" id="other-1-completed">Incomplete</strong>
+                <a class="govuk-link" href="/solicitor/review-evidence">
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
@@ -495,7 +495,7 @@
                         Merit assessment
                 </a>
                 <a class="govuk-link" href="">
-                  <strong class="task-incomplete" id="other-1-completed">Incomplete</strong>
+                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
                 </a>
               </li>
               <li class="task-list-item">
@@ -503,14 +503,14 @@
                         Evidence submission
                 </a>
                 <a class="govuk-link" href="">
-                  <strong class="task-incomplete" id="other-1-completed">Incomplete</strong>
+                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
                 </a>
               </li>
             </ul>
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="/solicitor/page10" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
 
       </div>
 
