--- a/app/views/solicitor/benefits-kind.html
+++ b/app/views/solicitor/benefits-kind.html
@@ -19,28 +19,15 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
+      <a class="govuk-c-back-link" href="paid-cash">Back</a>
+
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">The citizen told us that they do not get pain in cash at all, is that right?</h2>
+          <h2 class="govuk-heading-xl">Benefits in Kind</h2>
 
-          <form action="/solicitor/page14" method="post">
 
-            <div class="govuk-c-radios">
-              </br>
-              <fieldset class="govuk-c-fieldset">
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="cashyes" name="cashPay" type="radio" value="cashyes" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="new">Yes</label>
-                </div>
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="cashno" name="cashPay" type="radio" value="cashno">
-                  <label class="govuk-c-label govuk-c-radios__label" for="resume">No</label>
-                </div>
-              </fieldset>
-            </div>
-
-            <input class="govuk-c-button" type="submit" value="Continue">
+            <a class="govuk-c-button govuk-c-button" href="check-answers" role="button">Continue</a>
 
           </form>
 
