--- a/app/views/solicitor/review-income.html
+++ b/app/views/solicitor/review-income.html
@@ -19,13 +19,13 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="/solicitor/page11">Back</a>
+      <a class="govuk-c-back-link" href="review-evidence">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-            Review the citizen’s bank statement for outgoings
+            Review the citizen’s bank statement for income
           </h2>
 
           <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
@@ -42,7 +42,7 @@
 
           </br>
           <h2 class="govuk-heading-m">
-            Selected outgoings
+            Selected income
           </h2>
 
           <div>
@@ -58,14 +58,14 @@
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">06 Jan 18</td>
-                  <td class="govuk-c-table__cell">Halifax Mortgage</td>
-                  <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1200.00</td>
+                  <td class="govuk-c-table__cell">Child support</td>
+                  <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
                   <td class="govuk-c-table__cell"><a href="">Change</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">18 Jan 18</td>
-                  <td class="govuk-c-table__cell">Wiggly-tots Nursery</td>
-                  <td class="govuk-c-table__cell govuk-c-table__header--numeric">£600.00</td>
+                  <td class="govuk-c-table__cell">BACS transfer Tyreworld</td>
+                  <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1800.00</td>
                   <td class="govuk-c-table__cell"><a href="">Change</a></td>
                 </tr>
               </tbody>
@@ -73,7 +73,7 @@
             <br>
 
             <h2 class="govuk-heading-m">
-              Unexplained outgoings
+              Unexplained income
             </h2>
 
             <div>
@@ -91,43 +91,43 @@
                     <td class="govuk-c-table__cell">06 Jan 18</td>
                     <td class="govuk-c-table__cell">Payment from ebay</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Explain</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">18 Jan 18</td>
                     <td class="govuk-c-table__cell">Cash for tickets</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£25.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Explain</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">23 Jan 18</td>
                     <td class="govuk-c-table__cell">Refund from hairdressers</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£16.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Explain</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">26 Jan 18</td>
                     <td class="govuk-c-table__cell">Interest charge</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£0.23</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Explain</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">03 Feb 18</td>
                     <td class="govuk-c-table__cell">Transfer from Dave</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£20.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Explain</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">06 Feb 18</td>
                     <td class="govuk-c-table__cell">Transfer from Owen</td>
                     <td class="govuk-c-table__cell govuk-c-table__header--numeric">£12.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Explain</a></td>
                   </tr>
                 </tbody>
               </table>
               <br>
 
-            <a class="govuk-c-button govuk-c-button" href="obmultiple" role="button">Continue</a>
+            <a class="govuk-c-button govuk-c-button" href="review-outgoings" role="button">Continue</a>
 
           </div>
 
