--- a/app/views/solicitor/granted-access.html
+++ b/app/views/solicitor/granted-access.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"></p>
+    <a class="govuk-c-back-link" href="case-dashboard">Back</a>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -32,11 +32,9 @@
         <ul class="govuk-list govuk-list--bullet">
           <li><a href="#">3 bank accounts</a></li>
           <li><a href="#">1 ISA account</a></li>
-          <li><a href="#">1 Partridge</a></li>
-          <li><a href="#">2 Pear trees</a></li>
         </ul>
 
-        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/solicitor/page09" role="button">Next</a>
+        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/solicitor/application-task-list" role="button">Next</a>
 
       </div>
 
