--- a/app/views/solicitor/enter-NI.html
+++ b/app/views/solicitor/enter-NI.html
@@ -32,13 +32,13 @@
           <form class="form" action="dwp-search" method="get">
 
 
-            <label class="govuk-c-label" for="email" type="email">
+            <label class="govuk-c-label" for="nino">
               Enter National Insurance number
               <span class="govuk-c-label__hint govuk-!-width-two-thirds">
                 For example, QQ123456C
               </span>
             </label>
-            <input class="govuk-c-input govuk-!-width-two-third" id="email" name="email" type="text" required>
+            <input class="govuk-c-input govuk-!-width-two-third" id="nino" name="nino" required>
 
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
