--- a/app/views/solicitor/postcode.html
+++ b/app/views/solicitor/postcode.html
@@ -26,10 +26,10 @@
 
           <p></p>
           <h2 class="govuk-heading-xl">
-            What is your client's postcode?
+            What is your client's address?
           </h2>
 
-          <form class="form" action="select-address" method="post">
+          <form class="form" action="/solicitor/select-address" method="post">
 
             <label class="govuk-c-label" for="name">
               Enter postcode
@@ -41,6 +41,10 @@
             <input class="govuk-c-button" type="submit" value="Find address">
 
           </form>
+
+          <!--input class="govuk-c-button" type="submit" value="Continue"-->
+
+
 
         </div>
       </div>
