Added document upload feature as part of the P3.3 flow

--- a/app/views/solicitor/check-answers.html
+++ b/app/views/solicitor/check-answers.html
@@ -65,7 +65,7 @@
                 </tr>
               </tbody>
             </table>
-            <a href='identify-income-salary-other.html'>Add more income</a>
+            <a href=''>Add more income</a>
           </div>
           </br>
           </br>
@@ -106,7 +106,7 @@
                 </tr>
               </tbody>
             </table>
-            <a href='identify-outgoings-housing-childcare.html'>Add more outgoings</a>
+            <a href=''>Add more outgoings</a>
           </div>
           <br>
           <br>
