--- a/app/views/solicitor/evidence-submit-type.html
+++ b/app/views/solicitor/evidence-submit-type.html
@@ -19,25 +19,25 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="review-outgoings">Back</a>
+      <a class="govuk-c-back-link" href="declared-evidence">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">The citizen told us that they do not get paid in cash at all, is that right?</h2>
+          <h2 class="govuk-heading-xl">Please choose how you wish to submit this evidence</h2>
 
-          <form action="/solicitor/benefits-kind" method="post">
+          <form action="document-upload-type" method="post">
 
             <div class="govuk-c-radios">
               </br>
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="cashYes" name="cashPay" type="radio" value="cashyes" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="cashYes">Yes</label>
+                  <input class="govuk-c-radios__input" id="cashyes" name="cashPay" type="radio" value="cashyes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="new">Upload a file</label>
                 </div>
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="cashNo" name="cashPay" type="radio" value="cashno">
-                  <label class="govuk-c-label govuk-c-radios__label" for="cashNo">No</label>
+                  <input class="govuk-c-radios__input" id="cashno" name="cashPay" type="radio" value="cashno">
+                  <label class="govuk-c-label govuk-c-radios__label" for="resume">Take a photo</label>
                 </div>
               </fieldset>
             </div>
