Finished inital provider v3.2 flow and wired it to the rest of the prototype

--- a/app/views/solicitor/application-task-list-with-means.html
+++ b/app/views/solicitor/application-task-list-with-means.html
@@ -483,15 +483,15 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="/solicitor/review-evidence">
+                <a class="task-name" href="">
                         Means assessment
                 </a>
-                <a class="govuk-link" href="/solicitor/review-evidence">
+                <a class="govuk-link" href="">
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="merits-introduction">
                         Merit assessment
                 </a>
                 <a class="govuk-link" href="">
