Made minor changes to P3.3

--- a/app/views/solicitor/document-upload.html
+++ b/app/views/solicitor/document-upload.html
@@ -33,7 +33,7 @@
             </div>
 
 
-            <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
+            <a class="govuk-c-button govuk-c-button" href="document-upload-stocks" role="button">Continue</a>
 
           </form>
 
