--- a/app/views/solicitor/merits-final-declaration.html
+++ b/app/views/solicitor/merits-final-declaration.html
@@ -65,6 +65,9 @@
               </div>
 
           </div>
+
+          <a class="govuk-c-button govuk-c-button" href="application-task-list-with-means-merit" role="button">Continue</a>
+
       </div>
   </main>
   </div>
