--- a/app/views/solicitor/document-upload-type.html
+++ b/app/views/solicitor/document-upload-type.html
@@ -19,7 +19,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="evidence-submit-type">Back</a>
+      <a class="govuk-c-back-link" href="declared-evidence">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
